--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -1,16 +1,19 @@
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+
 name: Coveralls
- 
+
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
- 
+
 jobs:
   coveralls:
- 
+
     runs-on: ubuntu-latest
- 
+
     steps:
     - name: Cloning repo
       uses: actions/checkout@v2
@@ -25,3 +28,4 @@ jobs:
     - name: Coveralls GitHub Actions
       uses: coverallsapp/github-action@master
       with: 
+        github-token: ${{ secrets.GITHUB_TOKEN }}
