--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,3 +13,6 @@ sonar.sourceEncoding=UTF-8
 
 # Coverage info
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+# Coverage exclusions 
+sonar.coverage.exclusions=src/EjercicioLAB/suma.ts
