--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,3 +16,5 @@ sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # Coverage exclusions 
 sonar.coverage.exclusions=src/EjercicioLAB/suma.ts
+
+sonar.maintinability.exclusions=src/EjercicioLAB/suma.ts
