--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
     "nyc": "^15.1.0",
     "typedoc": "^0.22.15",
     "yargs": "^17.4.1"
