--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/ULL-ESIT-INF-DSI-2122/ull-esit-inf-dsi-21-22-prct10-async-fs-process-alu0101339887#readme",
   "devDependencies": {
     "@types/chai": "^4.3.1",
+    "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.29",
     "@types/yargs": "^17.0.10",
@@ -48,6 +49,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
+    "fs-extra": "^10.1.0",
     "nyc": "^15.1.0",
     "typedoc": "^0.22.15",
     "yargs": "^17.4.1"
